--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <!-- Webpage Title -->
-    <title>Yasin Webpage Title</title>
+    <title>Yasin's Website</title>
 
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
