--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <!-- Webpage Title -->
-    <title>Yasin's Website</title>
+    <title>Yasin Herken's Website</title>
 
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h1 class="h1-large">I am majoring in the 3rd year of Ankara University Computer Engineer with 3.52 CGPA.</h1>
+                        <h1 class="h1-large">I am majoring in the 3rd year of Ankara University Computer Engineering with 3.52 CGPA.</h1>
                         <a class="btn-solid-lg page-scroll" href="#about">Discover</a>
                         <a class="btn-outline-lg page-scroll" href="#contact"><i class="fas fa-user"></i>Contact Me</a>
                     </div> <!-- end of text-container -->
